# cppgradeup2

./: .gitignore  CMakeLists.txt  README.md
.github/scripts/: build_tasks.sh  changed_tasks.sh
.github/workflows/: manual_build.yml  on_pr.yml  on_push.yml
almar/task1/: CMakeLists.txt
almar/task1/lib/: task1_1.cpp  task1_2
almar/taske1/: CMakeLists.txt
almar/taske1/lib/: task1_1.cpp  task1_2.cpp
